2018-12-XX Jan Kotanski <jan.kotanski@desy.de>
	* add ROIAttributesNames property
	* tagged as 1.32.0

2018-12-12 Jan Kotanski <jan.kotanski@desy.de>
	* add Dynamic ROIs regions
	* tagged as 1.31.0

2018-12-11 Jan Kotanski <jan.kotanski@desy.de>
	* add axes for MoveMotors and MeshScan
	* tagged as 1.30.0

2018-12-07 Jan Kotanski <jan.kotanski@desy.de>
	* add taurus support
	* tagged as 1.29.0

2018-12-05 Jan Kotanski <jan.kotanski@desy.de>
	* add sending rois to onlineanalysis server
	* tagged as 1.28.0

2018-12-05 Jan Kotanski <jan.kotanski@desy.de>
	* fix image source behavior on no-image
	* tagged as 1.27.3

2018-12-04 Jan Kotanski <jan.kotanski@desy.de>
	* do not autorange on new frame
	* tagged as 1.27.2

2018-11-23 Jan Kotanski <jan.kotanski@desy.de>
	* change lavuezmqstreamtest to use JSON
	* tagged as 1.27.1

2018-11-21 Jan Kotanski <jan.kotanski@desy.de>
	* split imageDisplayWidget to extensions
	* tagged as 1.27.0

2018-11-13 Jan Kotanski <jan.kotanski@desy.de>
	* add __imageItem getter indepmendent of pyqtgraph version
	* tagged as 1.26.9

2018-11-13 Jan Kotanski <jan.kotanski@desy.de>
	* add lavuezmqstreamtest to setup script
	* tagged as 1.26.8

2018-11-13 Jan Kotanski <jan.kotanski@desy.de>
	* hook for the getHistogram bug in pyqtgraph
	* add lavuezmqstreamtest script without tango
	* tagged as 1.26.7

2018-11-06 Jan Kotanski <jan.kotanski@desy.de>
	* fix sync of roi labels
	* tagged as 1.26.6

2018-11-04 Jan Kotanski <jan.kotanski@desy.de>
	* fix for rescale when in angle
	* tagged as 1.26.5

2018-10-26 Jan Kotanski <jan.kotanski@desy.de>
	* fix for setting geometry when in angle
	* change default statswoscaling to True
	* tagged as 1.26.4

2018-10-26 Jan Kotanski <jan.kotanski@desy.de>
	* fix for rescaling in tools
	* tagged as 1.26.3

2018-10-25 Jan Kotanski <jan.kotanski@desy.de>
	* second fix for  MaximaTool
	* tagged as 1.26.2

2018-10-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix for  MaximaTool
	* tagged as 1.26.1
