@@ -1,5 +1,6 @@
 2018-12-XX Jan Kotanski <jan.kotanski@desy.de>
 	* add ROIAttributesNames property
+	* changel LavueController to pythonHL
 	* tagged as 1.32.0
 
 2018-12-12 Jan Kotanski <jan.kotanski@desy.de>
